cluster-cd/apps/base/heimdall/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dash
  labels:
    pod-security.kubernetes.io/enforce: privileged
